--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <html>
   <head>
     <title>reCAPTCHA demo</title>
+    //导入js
     <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
   </head>
-  <body>
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/pandao/editor.md@master/css/editormd.css" />
+<div id="test-editor">
+    <textarea style="display:none;">
+      
+    </textarea>
+</div>
+<script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/pandao/editor.md@master/editormd.min.js"></script>
+<script type="text/javascript">
+    $(function() {
+        var editor = editormd("test-editor", {
+            // width  : "100%",
+            // height : "100%",
+            path   : "https://cdn.jsdelivr.net/gh/pandao/editor.md@master/lib/"
+        });
+    });
+</script>
       <div class="g-recaptcha" data-sitekey="6LdE0r8ZAAAAABYLf7rIJ5Zi2GVf_mQ35hmPSGJT"></div>
-  </body>
 </html>
