--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
   <head>
     <title>reCAPTCHA demo</title>
-    //导入js
     <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
   </head>
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/pandao/editor.md@master/css/editormd.css" />
 <div id="test-editor">
     <textarea style="display:none;">
-      
     </textarea>
 </div>
 <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
@@ -16,7 +14,7 @@
 <script type="text/javascript">
     $(function() {
         var editor = editormd("test-editor", {
-            // width  : "100%",
+             width  : "90%",
             // height : "100%",
             path   : "https://cdn.jsdelivr.net/gh/pandao/editor.md@master/lib/"
         });
